k8s/applications/ai/litellm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: litellm-deployment
  labels:
    app: litellm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: litellm
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: litellm
    spec:
      hostIPC: false
      hostPID: false
      hostNetwork: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: litellm
        image: ghcr.io/berriai/litellm-non_root:v1.88.0
        args:
          - "--config"
          - "/app/proxy_server_config.yaml"
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          runAsUser: 1000
          capabilities:
            drop:
              - ALL
          readOnlyRootFilesystem: true
          seccompProfile:
            type: RuntimeDefault
        ports:
        - containerPort: 4000
        - containerPort: 4001
        resources:
          requests:
            memory: "2Gi"
            cpu: "35m"
          limits:
            memory: "4Gi"
            cpu: "1000m"
        livenessProbe:
          httpGet:
            path: /health/liveliness
            port: 4000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 10
          failureThreshold: 5
        startupProbe:
          httpGet:
            path: /health/liveliness
            port: 4000
          failureThreshold: 30
          periodSeconds: 5
        volumeMounts:
        - name: litellm-config
          mountPath: /app/proxy_server_config.yaml
          subPath: proxy_server_config.yaml
        - name: app-tmp
          mountPath: /app/tmp
        - name: app-cache
          mountPath: /app/cache
        - name: app-logs
          mountPath: /app/logs
        - name: tmp
          mountPath: /tmp

      volumes:
        - name: litellm-config
          configMap:
            name: litellm-config
        - name: app-tmp
          emptyDir:
            sizeLimit: 2Gi
        - name: app-cache
          emptyDir:
            sizeLimit: 2Gi
        - name: app-logs
          emptyDir:
            sizeLimit: 1Gi
        - name: tmp
          emptyDir:
            sizeLimit: 500Mi
